--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<div class="logo">
 					<h1>
 						<a href="index.html">
-							<img class="logo-img center-block" src="images/logo.png" alt="" /> Cat Life
+							<img class="logo-img center-block" src="images/logo.png" alt="" />
 						</a>
 					</h1>
 				</div>
