chenge text and menu

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <html lang="zxx">
 
 <head>
-	<title>Cat Life Animals Category Bootstrap Responsive Web Template | Home :: w3layouts</title>
+	<title>Paraiso fufu| Home :: w3layouts</title>
 	<!-- Meta tag Keywords -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
-	<meta name="keywords" content="Cat Life web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design"
+	<meta name="keywords" content="erizos, mascotas, pets, help pets"
 	/>
 	<script>
 		addEventListener("load", function () {
@@ -67,10 +67,10 @@
 							<div class="w3l-overlay">
 								<div class="container">
 									<div class="banner-text-info">
-										<h3>we provide
-											<span>care</span> that your
-											<span>pet</span> deserves!</h3>
-										<p>A comprehensive guide to cat care to make your pet feel your love</p>
+										<h3>nosotros
+											<span>cuidamos</span> De ellos
+										</h3>
+										<p>como organisacion nuestra mision es que ellos tengan una mejor vida</p>
 									</div>
 								</div>
 							</div>
@@ -81,10 +81,10 @@
 							<div class="w3l-overlay">
 								<div class="container">
 									<div class="banner-text-info">
-										<h3>you can show your
-											<span>love</span> to your
-											<span>pet</span>!</h3>
-										<p>A comprehensive guide to cat care to make your pet feel your love</p>
+										<h3>nos encargamos que
+											<span>tu</span> sepas darle 
+											<span>Amor</span>!</h3>
+										<p>Sabemos que no se nace sabiendo, por eso que brindamos todos los conocimientos</p>
 									</div>
 								</div>
 							</div>
@@ -95,10 +95,10 @@
 							<div class="w3l-overlay">
 								<div class="container">
 									<div class="banner-text-info">
-										<h3>we provide
-											<span>care</span> that your
-											<span>pet</span> deserves!</h3>
-										<p>A comprehensive guide to cat care to make your pet feel your love</p>
+										<h3>proveemos de
+											<span>todo</span> para su
+											<span>cuidado</span></h3>
+										<p>Necesitan vuidados y cosas especiales, ynosotros tenemos de todo para ellos y para ti</p>
 									</div>
 								</div>
 							</div>
@@ -109,10 +109,10 @@
 							<div class="w3l-overlay">
 								<div class="container">
 									<div class="banner-text-info">
-										<h3>you can show your
-											<span>love</span> to your
-											<span>pet</span>!</h3>
-										<p>A comprehensive guide to cat care to make your pet feel your love</p>
+										<h3>ellos pueden dar
+											<span>amor</span> di tu les das
+											<span>amor</span>!</h3>
+										<p>aun que sean muy anojones, tienen su corasonsito que puede dar mucho amor</p>
 									</div>
 								</div>
 							</div>
@@ -144,22 +144,22 @@
 							<a href="index.html">Home</a>
 						</li>
 						<li>
-							<a href="#about" class="scroll">About Us</a>
+							<a href="#about" class="scroll">Nosotros</a>
 						</li>
 						<li>
-							<a href="#services" class="scroll">Services</a>
+							<a href="#services" class="scroll">Servicios</a>
 						</li>
 						<li>
-							<a href="#blog" class="scroll">Our Blog</a>
+							<a href="#blog" class="scroll">Notas de blog</a>
 						</li>
 						<li>
-							<a href="#team" class="scroll">Our Team</a>
+							<a href="#team" class="scroll">El equipo</a>
 						</li>
 						<li>
-							<a href="#gallery" class="scroll">Gallery</a>
+							<a href="#gallery" class="scroll">Galeria</a>
 						</li>
 						<li>
-							<a href="#contact" class="scroll">Contact Us</a>
+							<a href="#contact" class="scroll">Contactanos</a>
 						</li>
 					</ul>
 				</div>
@@ -171,7 +171,7 @@
 	<!-- welcome -->
 	<div class="about" id="about">
 		<div class="container">
-			<h3 class="agile-title">Welcome</h3>
+			<h3 class="agile-title">Bienvenido</h3>
 			<div class="about-top w3ls-agile">
 				<div class="col-md-6 red">
 					<img class="img-responsive" src="images/ab.jpg" alt="">
