--- a/index.html
+++ b/index.html
@@ -178,25 +178,25 @@
 				</div>
 				<div class="col-md-6 come">
 					<div class="about-wel">
-						<h5>A Few Words About Our
-							<span>Cat Life</span>
+						<h5>inserte algo de
+							<span>erizos de tierra</span>
 						</h5>
 						<p>Masagni dolores eoquie int Basmodi temporant, ut laboreas dolore magnam aliquam kuytase uaeraquis autem vel eum iure
 							reprehend.Unicmquam eius, Basmodi temurer sehsMunim.</p>
 						<ul>
 							<li>
-								<i class="glyphicon glyphicon-ok"></i>Cat health and Care</li>
+								<i class="glyphicon glyphicon-ok"></i>cosas de erizos</li>
 							<li>
-								<i class="glyphicon glyphicon-ok"></i>Cat grooming</li>
+								<i class="glyphicon glyphicon-ok"></i>unos erizos</li>
 							<li>
-								<i class="glyphicon glyphicon-ok"></i>Food for cats</li>
+								<i class="glyphicon glyphicon-ok"></i>Comida para erizos</li>
 							<li>
-								<i class="glyphicon glyphicon-ok"></i>Cat behavior</li>
+								<i class="glyphicon glyphicon-ok"></i>incerte erizoz</li>
 						</ul>
 					</div>
 					<div class="button-styles">
-						<a href="#" data-toggle="modal" data-target="#myModal2">More Info</a>
-						<a href="#contact" class="button2-w3l scroll">Contact Us</a>
+						<a href="#" data-toggle="modal" data-target="#myModal2">Mas informacion</a>
+						<a href="#contact" class="button2-w3l scroll">Contanos</a>
 					</div>
 				</div>
 				<div class="clearfix"> </div>
@@ -239,7 +239,7 @@
 	<!-- middle section -->
 	<div class="middle-w3l">
 		<div class="container">
-			<h2>Get to know everything about your cat!</h2>
+			<h2>conoce todo sobre tu erizo</h2>
 			<div class="button-styles">
 				<a href="#contact" class="button3-w3l scroll">Contact Us</a>
 			</div>
@@ -260,7 +260,7 @@
 						</div>
 					</div>
 					<fieldset>
-						<legend>Service 1</legend>
+						<legend>Servicio 1</legend>
 						consectetur adipiscing elit, sed do eiusmod tempor et dolore magna aliqua.
 					</fieldset>
 				</div>
@@ -272,7 +272,7 @@
 						</div>
 					</div>
 					<fieldset>
-						<legend>Service 2</legend>
+						<legend>Servisio 2</legend>
 						consectetur adipiscing elit, sed do eiusmod tempor et dolore magna aliqua.
 					</fieldset>
 				</div>
@@ -284,7 +284,7 @@
 						</div>
 					</div>
 					<fieldset>
-						<legend>Service 3</legend>
+						<legend>Servicio 3</legend>
 						consectetur adipiscing elit, sed do eiusmod tempor et dolore magna aliqua.
 					</fieldset>
 				</div>
@@ -299,7 +299,7 @@
 						</div>
 					</div>
 					<fieldset>
-						<legend>Service 4</legend>
+						<legend>Servicio 4</legend>
 						consectetur adipiscing elit, sed do eiusmod tempor et dolore magna aliqua.
 					</fieldset>
 				</div>
@@ -311,7 +311,7 @@
 						</div>
 					</div>
 					<fieldset>
-						<legend>Service 5</legend>
+						<legend>Servisio 5</legend>
 						consectetur adipiscing elit, sed do eiusmod tempor et dolore magna aliqua.
 					</fieldset>
 				</div>
@@ -323,7 +323,7 @@
 						</div>
 					</div>
 					<fieldset>
-						<legend>Service 6</legend>
+						<legend>Servicio 6</legend>
 						consectetur adipiscing elit, sed do eiusmod tempor et dolore magna aliqua.
 					</fieldset>
 				</div>
@@ -342,11 +342,11 @@
 	<!-- blog -->
 	<div class="blog" id="blog">
 		<div class="container">
-			<h3 class="agile-title">Our Blog</h3>
+			<h3 class="agile-title">Blog</h3>
 			<div class="col-md-5 col-xs-6 blog-grids">
 				<div class="blog-full-wthree">
 					<div class="blog-left-agileits">
-						<p>Jan</p>
+						<p>Junio</p>
 						<span>18</span>
 					</div>
 					<div class="blog-right-agileits-w3layouts">
@@ -354,7 +354,7 @@
 							<a href="#" data-toggle="modal" data-target="#myModal2">eoquie int temporant 2018</a>
 						</h4>
 						<p>
-							<a href="#" data-toggle="modal" data-target="#myModal2">Cat Life</a>
+							<a href="#" data-toggle="modal" data-target="#myModal2">erizos</a>
 						</p>
 					</div>
 					<div class="clearfix"> </div>
@@ -369,7 +369,7 @@
 							<a href="#" data-toggle="modal" data-target="#myModal2">eoquie int temporant 2018</a>
 						</h4>
 						<p>
-							<a href="#" data-toggle="modal" data-target="#myModal2">Cat Life</a>
+							<a href="#" data-toggle="modal" data-target="#myModal2">erizos</a>
 						</p>
 					</div>
 					<div class="clearfix"> </div>
@@ -384,7 +384,7 @@
 							<a href="#" data-toggle="modal" data-target="#myModal2">eoquie int temporant 2018</a>
 						</h4>
 						<p>
-							<a href="#" data-toggle="modal" data-target="#myModal2">Cat Life</a>
+							<a href="#" data-toggle="modal" data-target="#myModal2">erizos</a>
 						</p>
 					</div>
 					<div class="clearfix"> </div>
@@ -393,7 +393,7 @@
 			<div class="col-md-5 col-xs-6 blog-grids">
 				<div class="blog-full-wthree">
 					<div class="blog-left-agileits">
-						<p>Jan</p>
+						<p>junio</p>
 						<span>26</span>
 					</div>
 					<div class="blog-right-agileits-w3layouts">
@@ -416,7 +416,7 @@
 							<a href="#" data-toggle="modal" data-target="#myModal2">eoquie int temporant 2018</a>
 						</h4>
 						<p>
-							<a href="#" data-toggle="modal" data-target="#myModal2">Cat Life</a>
+							<a href="#" data-toggle="modal" data-target="#myModal2">erizos</a>
 						</p>
 					</div>
 					<div class="clearfix"> </div>
@@ -431,7 +431,7 @@
 							<a href="#" data-toggle="modal" data-target="#myModal2">eoquie int temporant 2018</a>
 						</h4>
 						<p>
-							<a href="#" data-toggle="modal" data-target="#myModal2">Cat Life</a>
+							<a href="#" data-toggle="modal" data-target="#myModal2">erizos</a>
 						</p>
 					</div>
 					<div class="clearfix"> </div>
@@ -451,7 +451,7 @@
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal">&times;</button>
 					<div class="modal-info">
-						<h4>Cat Life</h4>
+						<h4>erizos</h4>
 						<img src="images/g2.jpg" alt=" " class="img-responsive" />
 						<h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
 						<p class="para-agileits-w3layouts">Duis sit amet nisi quis leo fermentum vestibulum vitae eget augue. Nulla quam nunc, vulputate id urna at, tempor tincidunt
@@ -467,14 +467,14 @@
 	<!-- team -->
 	<div class="team" id="team">
 		<div class="container">
-			<h3 class="agile-title">Our Team</h3>
+			<h3 class="agile-title">El eqiopo</h3>
 			<div class="team-agileinfo agileits-w3layouts">
 				<div class="col-md-6 team-grid w3-agileits">
 					<div class="team-grid-right">
 						<img src="images/t1.jpg" alt=" " class="img-responsive" />
 					</div>
 					<div class="team-grid-left">
-						<h4>Nathan Tim</h4>
+						<h4>juanito peres</h4>
 						<p>Adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem</p>
 					</div>
 					<div class="clearfix"> </div>
@@ -484,7 +484,7 @@
 						<img src="images/t2.jpg" alt=" " class="img-responsive" />
 					</div>
 					<div class="team-grid-left non">
-						<h4>Keith Ryan</h4>
+						<h4>el brayathan</h4>
 						<p>Adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem</p>
 					</div>
 					<div class="clearfix"> </div>
@@ -497,7 +497,7 @@
 						<img src="images/t3.jpg" alt=" " class="img-responsive" />
 					</div>
 					<div class="team-grid-left">
-						<h4>Irene Jan</h4>
+						<h4>la kimberly</h4>
 						<p>Adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem</p>
 					</div>
 					<div class="clearfix"> </div>
@@ -507,7 +507,7 @@
 						<img src="images/t4.jpg" alt=" " class="img-responsive" />
 					</div>
 					<div class="team-grid-left non">
-						<h4>Angela Leah</h4>
+						<h4>la deyanire</h4>
 						<p>Adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem</p>
 					</div>
 
@@ -522,7 +522,7 @@
 	<!-- Gallery -->
 	<div id="gallery" class="gallery">
 		<div class="container">
-			<h3 class="agile-title">Gallery</h3>
+			<h3 class="agile-title">Galerya</h3>
 		</div>
 		<div class="agileinfo-gallery-row">
 			<div class="col-md-3 col-sm-3 col-xs-4 w3gallery-grids">
@@ -573,22 +573,22 @@
 	<!-- contact -->
 	<div class="contact" id="contact">
 		<div class="container">
-			<h3 class="agile-title">Contact Us</h3>
+			<h3 class="agile-title">Contactanos</h3>
 			<div class="col-md-9 col-sm-9 contact-right">
 				<form action="#" method="post">
-					<input type="text" name="name" placeholder="Your name" required="">
-					<input type="email" name="email" placeholder="Your email" required="">
-					<input type="text" name="subject" placeholder="Your subject" required="">
-					<input type="text" name="phone number" placeholder="Phone number" required="">
-					<textarea name="message" placeholder="Your message" required=""></textarea>
-					<input type="submit" value="Send">
+					<input type="text" name="name" placeholder="Tu nombre" required="">
+					<input type="email" name="email" placeholder="Tu email" required="">
+					<input type="text" name="subject" placeholder="asunto" required="">
+					<input type="text" name="phone number" placeholder="Telefono" required="">
+					<textarea name="message" placeholder="Mensaje" required=""></textarea>
+					<input type="submit" value="Enviar">
 				</form>
 			</div>
 			<div class="col-md-3 col-sm-3 contact-left">
 				<div class="address">
 					<h4>
-						<i class="fa fa-map-marker" aria-hidden="true"></i>Location</h4>
-					<p>345 Setwant natrer,</p>
+						<i class="fa fa-map-marker" aria-hidden="true"></i>Ubicacion</h4>
+					<p>trinidad 1415,</p>
 					<p>Metropolitan, Italy.</p>
 				</div>
 				<div class="phone">
