--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 							<a href="#" data-toggle="modal" data-target="#myModal2">eoquie int temporant 2018</a>
 						</h4>
 						<p>
-							<a href="#" data-toggle="modal" data-target="#myModal2">Cat Life</a>
+							<a href="#" data-toggle="modal" data-target="#myModal2">erizos</a>
 						</p>
 					</div>
 					<div class="clearfix"> </div>
