error fixed menu

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 							<a href="#services" class="scroll">Servicios</a>
 						</li>
 						<li>
-							<a href="#blog" class="scroll">Notas de blog</a>
+							<a href="#blog" class="scroll">blog</a>
 						</li>
 						<li>
 							<a href="#team" class="scroll">El equipo</a>
