--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <html lang="zxx">
 
 <head>
-	<title>Paraiso fufu| Home :: w3layouts</title>
+	<title>Paraiso fufu| Home </title>
 	<!-- Meta tag Keywords -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
